[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/world.gd" type="Script" id=3]
[ext_resource path="res://scenes/booster_platform.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Kenney Mini Square Mono.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/moving_enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/moving_platform.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/backrground.png" type="Texture" id=8]
[ext_resource path="res://assets/pause.png" type="Texture" id=9]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D

"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 90, 25 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.172549, 0.615686, 0.552941, 1 )
corner_radius_top_left = 42
corner_radius_top_right = 42
corner_radius_bottom_right = 42
corner_radius_bottom_left = 42
corner_detail = 9

[node name="world" type="Node2D"]
script = ExtResource( 3 )
platform_scene = [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 6 ) ]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 320 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 0.565625, 0.626953 )
texture = ExtResource( 8 )
centered = false

[node name="platform_generator" type="Node2D" parent="."]
script = SubResource( 1 )

[node name="platform" parent="platform_generator" instance=ExtResource( 2 )]
position = Vector2( 89, 306 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 90, 245 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 90, 160 )
current = true

[node name="platform_eraser" type="Area2D" parent="Camera2D"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/platform_eraser"]
position = Vector2( 1, 217 )
shape = SubResource( 2 )

[node name="score" type="Label" parent="Camera2D"]
margin_left = -72.0
margin_top = -150.0
margin_right = 24.0
margin_bottom = -130.0
custom_colors/font_color = Color( 0.615686, 0.12549, 0.12549, 1 )
custom_fonts/font = SubResource( 3 )
text = "SCORE:0"

[node name="pause" type="Button" parent="Camera2D"]
pause_mode = 2
margin_left = 64.0
margin_top = -148.0
margin_right = 84.0
margin_bottom = -130.0
custom_colors/font_color = Color( 0.615686, 0.12549, 0.12549, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true

[node name="Sprite" type="Sprite" parent="Camera2D/pause"]
position = Vector2( 10, 9 )
scale = Vector2( 0.0507813, 0.0390625 )
texture = ExtResource( 9 )

[node name="pause_label" type="Label" parent="Camera2D"]
visible = false
margin_left = -46.0
margin_top = -58.0
margin_right = 50.0
margin_bottom = -38.0
custom_colors/font_color = Color( 0.615686, 0.12549, 0.12549, 1 )
custom_fonts/font = SubResource( 3 )
text = "PAUSED"
align = 1

[connection signal="body_entered" from="Camera2D/platform_eraser" to="." method="_on_platform_eraser_body_entered"]
[connection signal="pressed" from="Camera2D/pause" to="." method="_on_pause_pressed"]
